--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
             <version>${allure.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
+        </dependency>
+
     </dependencies>
 
     <build>
