--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.yandex.praktikum</groupId>
-    <artifactId>Diplom_2_API</artifactId>
+    <artifactId>Diplom_2</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <!--Этот блок нужен для корректной работы с JDK9+-->
